fix:change a editor api